# archwrap

./: CMakeLists.txt  README.md
include/: archwrap.h
src/: archwrap.c
test/: read.c
